codex-rs/cli/src/account_cmd/snapshots/codex__account_cmd__display__tests__automatic_email_names_keep_raw_labels_in_machine_output.snap
---
source: cli/src/account_cmd/display_tests.rs
assertion_line: 430
expression: table
---
ACCOUNT            PROFILE        NOW  PLAN  PRIORITY  LOGIN   POOL      PRIMARY USED  SECONDARY USED  UPDATED
alice@example.com  acct-…00001-1  *    Pro         10  stored  eligible       unknown         unknown  unknown
Work               profile-2      -    Pro         10  stored  eligible       unknown         unknown  unknown
profile-3          profile-3      -    Pro         10  stored  eligible       unknown         unknown  unknown
Cached status; UPDATED = oldest quota sample; retry = local.
* current; more: --details / --show-profile
