codex-rs/cli/src/account_cmd/snapshots/codex__account_cmd__display__tests__details_keep_full_email_and_unknown_independent_cache_ages.snap
---
source: cli/src/account_cmd/display_tests.rs
assertion_line: 386
expression: output
---
alice@example.com Primary  [current]
  Profile: acct-…00001-1
  Login: stored
  Pool: eligible
  Plan: Pro; priority: 10
  5h used: 0%
  week used: unknown
  Updated: clock skew (oldest sample)
  Profile: acct-00000000000000000001-1
  Email: alice@example.com
  Primary (5h):
    Last sample: 0% used
    Updated: 2026-01-01 11:55 UTC (5m ago)
    Reset: start unconfirmed
  Secondary (week):
    Last sample: 9% used
    Updated: 2026-01-01 13:00 UTC (clock skew)
    Reset: unknown
    Current usage: unknown; observation is future-dated.
  Warmup: unknown

Cached status; UPDATED = oldest quota sample; retry = local.
* current; priority: lower is preferred; login validity not checked.
