codex-rs/cli/src/account_cmd/snapshots/codex__account_cmd__display__tests__elapsed_resets_and_mixed_durations_do_not_claim_current_five_hour_usage.snap
---
source: cli/src/account_cmd/display_tests.rs
expression: output
---
ACCOUNT   NOW  PLAN  PRIORITY  LOGIN   POOL      PRIMARY USED  1D USED  UPDATED
Work Pro  *    Pro         10  stored  eligible         stale      <1%  25m ago
Personal  -    Pro        100  stored  eligible         stale      <1%  25m ago
Cached status; UPDATED = oldest quota sample; retry = local.
* current; more: --details / --show-profile
