codex-rs/cli/src/account_cmd/snapshots/codex__account_cmd__display__tests__narrow_show_profile_wraps_full_selector_without_truncation.snap
---
source: cli/src/account_cmd/display_tests.rs
expression: output
---
Work Pro  [current]
  Profile:
acct-1234567890abcdef1234567890abcdef-1
  Login: stored
  Pool: eligible
  Plan: Pro; priority: 4294967295
  Primary used: unknown
  Secondary used: unknown
  Updated: unknown (oldest sample)

Cached status; UPDATED = oldest quota
sample; retry = local.
* current; more: --details /
--show-profile
